--- a/index.html
+++ b/index.html
@@ -31,10 +31,47 @@
 		<!-- ---------💗💗💗💗💗BOTONES2💗💗💗💗💗------------ -->
 		<div class="Text_Central_U">
 		<div class="">
-		<a href="#" class="Btn_U">UNIRME</a>
-		<a href="#" class="Btn_U">VER MÁS</a>
+		<nav class="Cuarto">
+    <a href="http://aminoapps.com/c/Flipaclipenpespanol">
+    <button class="Unn">UNIRME</button></a>
+		<button class="Btn_U"><label for="Ocultar_A">VER MÁS</label></button>
 		</div>
 		</div>
+		
+		<input type="checkbox" id="Ocultar_A">
+		
+	 
+	<div id="Oculto_Uno">
+	<nav class="btn_completo">
+		<button class="Unn"><label for="soy_u">STAFF-FLIPA</label></button>
+		<button class="Unn"><label for="soy_d">PÁG ÚNICA</label></button>
+		<button class="Unn"><label for="soy_t">INFORMACIÓN</label></button>
+	</nav>
+<!-- <input type="button" value="botón" onclick="alert('HOLS')"> -->
+<input type="checkbox" id="SS">
+<div id="historia_Q"><!-- historia -->
+
+<input type="radio" name="OPCIÓN" id="soy_u">
+<div id="ESPERA"><p>
+				<img src="1622159555718.png" class="I_STAFF"></img>
+				<h3 class="Text_Text_Text" id="Fl">【Staff-Flipa】</h3>
+				<h4 id="Fl">LÍDER</h4>
+				<h4 id="Fl">CURADOR</h4>
+						
+						
+</p></div>
+
+<input type="radio" name="OPCIÓN" id="soy_d">
+<div id="ESPERAA"><p>OPCIÓN 2</p></div>
+
+<input type="radio" name="OPCIÓN" id="soy_t">
+<div id="ESPERAAA"><p>OPCIÓN 3</p></div>
+
+		
+		
+		
+		
+		
 		<!-- ---------💗💗💗💗💗BOTONES2💗💗💗💗💗------------ -->
 		
 		
