--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 			alert ("Esta página esta en desarrollo, si encontrás algún error, házmelo saber con un screenshot y envialo al desarrollador. ¡Carnat!");
 			
 	</script>
-				
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2JSXE7K4T6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2JSXE7K4T6');
+</script>
 				
 </head>
 <body>
